<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobAlert</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string-array name="nav_array">
        <item>Home</item>
        <item>People</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="alert_wiget">Alert</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_help">Help</string>
    <string name="add_new_contact">Add a new Contact</string>
    <string name="add_from_contacts">Add from Contacts</string>
    <string name="alert_contact">Alert Contact</string>
    <string name="name_">Name:</string>
    <string name="phone_no_">Phone No:</string>
    <string name="add">Add</string>
    <string name="info_para">These people are your emergency contacts and will be alerted when you are in danger or just feeling unsafe.</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="back">Back</string>
    <string name="add_new_from_contacts">Add New From Contacts</string>
    <string name="tap_here">TAP HERE!!</string>
    <string name="down_arrow">down arrow</string>
    <string name="getting_location">Getting Location</string>
    <string name="message">Message</string>
    <string name="emergency_no">Emergency Number</string>
    <string name="key_message">message</string>
    <string name="key_emergency_no">emergencyno</string>
    <string name="title_activity_alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="custom_dialog_image">custom dialog image</string>
    <string name="message_sent_">Message Sent</string>
    <string name="settings">Settings</string>
    <string name="Location_key">Locinfo</string>
    <string name="default_message">I am in danger!</string>
    <string name="moalert_help">MobAlert lets you quickly alert people who are important to you when you are in danger, or in an unsafe location, and provides them with the information that they may be able to use to help you.</string>
    <string name="about_mobalert">About MobAlert</string>
    <string name="ask_for_help_header">Ask for help</string>
    <string name="ask_for_help">When you are feeling unsafe, quickly press the Emergency Alert Button or just say HELP! to alert your emergency contacts with information such as your current location : Latitude and Longitude and Place [Reverse GeoCoding] and a predefined message about your situation.</string>
    <string name="filler_new_row">" "</string>
    <string name="usage">You can also add a predefined message about your situation by setting it in the settings menu.</string>
    <string name="icon_for_app_widget">icon for app widget</string>
    <string name="say_help">SAY HELP!!</string>
    <string name="call_emergency_number">Emergency Call</string>
    <string name="call">Call</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert">!</string>
    <string name="title_activity_call_from_widget">CallFromWidget</string>
    <string name="empty_emergency_contacts">Empty Emergency Contacts</string>
    <string name="widget_app_logo">Widget App Logo</string>
    <string name="features">Features : How to use MobAlert</string>
    <string name="features_start">MobAlert comes with two features:\n1. Emergency Alert\n2. Emergency Call\n Tap on Call Button to make emergency call to the emergency contact saved or tap on alert or say Help! </string>
    <string name="features_body1">There is a navigation drawer to help you navigate to various screens, i.e. Home, People, Settings, Help.</string>
    <string name="fig_help_home_screen">[Help Screen]</string>
    <string name="fig_call_screen">[Call Screen]</string>
    <string name="fig_navigation_screen">[Navigation Drawer]</string>
    <string name="title_activity_location_provider">LocationProvider</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="loc_not_found">No Location Found</string>
    <string name="fig_notifiying_contacts">[Notification Dialog]</string>
    <string name="featuresBody2">Tap on Emergency button or say HELP! to start notifying contacts.</string>
    <string name="featuresBody3">MobAlert sends emergency message as your current location in the form of Google Maps link for pinpointing your exact location on Google Maps and send your location address.</string>
    <string name="fig_emergency_message">[Emergency Message]</string>
    <string name="featuresBody4">MobAlert uses Google Play Services Location API to fetch location and Reverse Geocoding service to fetch location address.</string>
    <string name="emergency_contacts">Adding emergency contacts</string>
    <string name="peopleAdd">To add emergency contacts, goto People in navigation drawer. There are two options:\n1. Add a new contact\n2. Add an existing contact from contacts\nTo delete any emergency contact, tap on the contact to delete and select appropriate option.</string>
    <string name="fig_people_add">[Add Contact]</string>
    <string name="fig_people_del">[Delete Contact]</string>
    <string name="settings_info">MobAlert comes with two settings:\n1. Emergency Message\n2. Emergency Number\nIn message settings you provide the starting message as information to the emergency alert message to send. By default its set to : "I am in danger".\nEmergency number settings is where you provide a number to make emergency call on tapping call button on the home screen.</string>
    <string name="fig_settings">[Settings]</string>
    <string name="widgetHeader">MobAlert Widget</string>
    <string name="widgetInfo">MobAlert comes with a widget to send emergency alert to contacts. One touch alert and call features are included in the widget. Widget also shows the list of contacts added as emergency contacts. Sync button is to refresh the list.</string>
    <string name="fig_widget">[MobAlert Widget]</string>

</resources>