<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_add_contact_background"
    android:padding="16dp" >

    <EditText
        android:id="@+id/ephoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ename"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ename"
        android:layout_centerHorizontal="true"
        android:text="@string/name_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/phone_no_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/badd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ephoneNo"
        android:layout_below="@+id/ephoneNo"
        android:layout_marginTop="45dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/bback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/badd"
        android:layout_alignBottom="@+id/badd"
        android:layout_alignRight="@+id/ephoneNo"
        android:text="@string/back" />

</RelativeLayout>