<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff4444"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FragmentMain" >

    <TextView
        android:id="@+id/t_emergency_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_alert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/emergency_alert"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/b_alert"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_custom"
        android:clickable="true"
        android:text="@string/alert"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/SayHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/downArrow"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/say_help"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/downArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/b_alert"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/down_arrow"
        android:src="@android:drawable/arrow_down_float" />

</RelativeLayout>