<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvPeople_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/info_para"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/baddNew"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/add_new_contact"
            android:src="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/taddNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            android:text="@string/add_new_contact"
            android:textSize="25sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/baddNew_fromContacts"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/add_new_from_contacts"
            android:src="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/taddNew_fromContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            android:text="@string/add_from_contacts"
            android:textSize="25sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <ListView
        android:id="@+id/lcontact_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp" >
    </ListView>

</LinearLayout>