<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo"
    android:padding="@dimen/widget_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="2dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/widget_app_image"
                android:layout_width="112dp"
                android:layout_height="35dp"
                android:contentDescription="@string/widget_app_logo"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_widgetlauncher" />

            <Button
                android:id="@+id/alert"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/alert_wiget"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/call"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/call"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/widget_contacts_info"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/widget_frame" />

            <TextView
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty_emergency_contacts"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/sync_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_sync_button"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>